2011-05-04  Fridrich Strba  <fridrich.strba@bluewin.ch>

Reviewed by Adam Barth.

        Add COMPILER(MINGW) to the compilers using the Microsoft C Runtime's vsnprintf.
        The vsnprintf is part of Microsoft C runtime used also by MinGW (GCC) toolchain.
        https://bugs.webkit.org/show_bug.cgi?id=58579

        * dom/XMLDocumentParserLibxml2.cpp:
        (WebCore::XMLDocumentParser::error):

Canonical link: https://commits.webkit.org/75485@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85800 268f45cc-cd09-0410-ab3c-d52691b4dbfc